--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,4 +5,8 @@
   --color-hover: #01a6a6;
 
   --font-primary: "Indie Flower", cursive;
+
+  --hue-neutral: 200;
+  --hue-incorrect: 0;
+  --hue-correct: 145;
 }
