--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,7 +6,6 @@
 
   --font-primary: "Indie Flower", cursive;
 
-  --hue-neutral: 200;
-  --hue-incorrect: 0;
-  --hue-correct: 145;
+  --color-correct: #0bc21b;
+  --color-incorrect: #ee1a1a;
 }
