--- a/sass/main.css
+++ b/sass/main.css
@@ -5,9 +5,8 @@
   --color-white: #fff;
   --color-hover: #01a6a6;
   --font-primary: "Indie Flower", cursive;
-  --hue-neutral: 200;
-  --hue-incorrect: 0;
-  --hue-correct: 145;
+  --color-correct: #0bc21b;
+  --color-incorrect: #ee1a1a;
 }
 
 *,
@@ -70,21 +69,20 @@ body {
   padding: 1rem 0;
   margin: 1rem auto;
   width: 80%;
-  --hue: var(--hue-neutral);
-}
-
-.choice-container.correct {
-  --hue: var(--hue-correct);
-}
-
-.choice-container.incorrect {
-  --hue: var(--hue-incorrect);
 }
 
 .choice-prefix {
   padding: 1.5rem 2.3rem;
   border-radius: 50%;
   background: var(--color-white);
+}
+
+.choice-prefix.correct {
+  background-color: var(--color-correct);
+}
+
+.choice-prefix.incorrect {
+  background-color: var(--color-incorrect);
 }
 
 .choice-text {
@@ -98,6 +96,14 @@ body {
 .choice-text:hover {
   cursor: pointer;
   background: var(--color-white);
+}
+
+.choice-text.correct {
+  background-color: var(--color-correct);
+}
+
+.choice-text.incorrect {
+  background-color: var(--color-incorrect);
 }
 
 .button-container {
