--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
+@import "abstracts/reset";
 @import "abstracts/variables";
+
 @import "base/base";
+
+@import "components/buttons";
+@import "components/options";
+@import "components/progress";
+@import "components/questions";
+@import "components/quiz";
