--- a/sass/components/_options.scss
+++ b/sass/components/_options.scss
@@ -34,11 +34,11 @@
   background: var(--color-white);
 }
 
-.option-prefix.correct {
+.option-number.correct {
   background-color: var(--color-correct);
 }
 
-.option-prefix.incorrect {
+.option-number.incorrect {
   background-color: var(--color-incorrect);
 }
 
