--- a/sass/main.css
+++ b/sass/main.css
@@ -96,11 +96,11 @@ body {
   background: var(--color-white);
 }
 
-.option-prefix.correct {
+.option-number.correct {
   background-color: var(--color-correct);
 }
 
-.option-prefix.incorrect {
+.option-number.incorrect {
   background-color: var(--color-incorrect);
 }
 
