--- a/sass/components/_options.scss
+++ b/sass/components/_options.scss
@@ -1,64 +1,61 @@
 .option-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
-  color: var(--color-secondary);
-  font-size: 2.5rem;
-  font-weight: 700;
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 2rem;
-}
 
-.option-list {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
+  color: var(--color-secondary);
+  width: 80%;
+  margin: 2rem auto;
 
   &:hover {
     cursor: pointer;
   }
 }
 
-.option-number {
-  width: 50px;
+.option {
+  width: 100%;
   height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5rem;
-  border-radius: 50%;
-  background: var(--color-white);
-}
-
-.option-number.correct {
-  background-color: var(--color-correct);
-}
-
-.option-number.incorrect {
-  background-color: var(--color-incorrect);
-}
-
-.option-text {
-  width: 80%;
   border-radius: 10px;
   background: var(--color-white);
   display: flex;
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-align: center;
+  margin: 1rem 0;
+
   justify-content: center;
   align-items: center;
-  border: none;
+  position: relative;
   font-family: var(--font-primary);
+
+  &:nth-child(1)::after {
+    content: "1";
+    @include option-left;
+  }
+
+  &:nth-child(2)::after {
+    content: "2";
+    @include option-right;
+  }
+
+  &:nth-child(3)::after {
+    content: "3";
+    @include option-left;
+  }
+
+  &:nth-child(4)::after {
+    content: "4";
+    @include option-right;
+  }
+
+  &:nth-child(5)::after {
+    content: "5";
+    @include option-left;
+  }
 }
 
-.option-text.correct {
+.option.correct {
   background-color: var(--color-correct);
 }
 
-.option-text.incorrect {
+.option.incorrect {
   background-color: var(--color-incorrect);
 }
