--- a/sass/components/_progress.scss
+++ b/sass/components/_progress.scss
@@ -1,9 +1,9 @@
-.progress-container {
+.page-counter-container {
   color: var(--color-secondary);
   display: flex;
   justify-content: center;
   font-size: 5rem;
-  padding-bottom: 2rem;
+  padding: 1rem 0;
 }
 
 .results {
