--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -2,12 +2,12 @@
   background: var(--color-white);
   border-radius: 10px;
   padding: 2rem 0;
-  margin: 0 auto;
+  margin: 2rem auto;
   width: 80%;
   text-align: center;
 }
 
-.question-text {
+.quiz-question {
   color: var(--color-secondary);
   font-size: 2.5rem;
 }
