--- a/sass/main.css
+++ b/sass/main.css
@@ -63,77 +63,102 @@ body {
 
 .option-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
   color: var(--color-secondary);
-  font-size: 2.5rem;
-  font-weight: 700;
   width: 80%;
-  margin: 0 auto;
-  margin-top: 2rem;
+  margin: 2rem auto;
 }
-
-.option-list {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
-}
-.option-list:hover {
+.option-container:hover {
   cursor: pointer;
 }
 
-.option-number {
-  width: 50px;
+.option {
+  width: 100%;
   height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5rem;
-  border-radius: 50%;
-  background: var(--color-white);
-}
-
-.option-number.correct {
-  background-color: var(--color-correct);
-}
-
-.option-number.incorrect {
-  background-color: var(--color-incorrect);
-}
-
-.option-text {
-  width: 80%;
   border-radius: 10px;
   background: var(--color-white);
   display: flex;
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-align: center;
+  margin: 1rem 0;
   justify-content: center;
   align-items: center;
-  border: none;
+  position: relative;
   font-family: var(--font-primary);
 }
+.option:nth-child(1)::after {
+  content: "1";
+  font-size: 2rem;
+  position: absolute;
+  border: 1.5rem solid var(--color-primary);
+  width: 80px;
+  height: 80px;
+  padding-top: 1rem;
+  border-radius: 50%;
+  left: -15px;
+}
+.option:nth-child(2)::after {
+  content: "2";
+  font-size: 2rem;
+  position: absolute;
+  border: 1.5rem solid var(--color-primary);
+  width: 80px;
+  height: 80px;
+  padding-top: 1rem;
+  border-radius: 50%;
+  right: -15px;
+}
+.option:nth-child(3)::after {
+  content: "3";
+  font-size: 2rem;
+  position: absolute;
+  border: 1.5rem solid var(--color-primary);
+  width: 80px;
+  height: 80px;
+  padding-top: 1rem;
+  border-radius: 50%;
+  left: -15px;
+}
+.option:nth-child(4)::after {
+  content: "4";
+  font-size: 2rem;
+  position: absolute;
+  border: 1.5rem solid var(--color-primary);
+  width: 80px;
+  height: 80px;
+  padding-top: 1rem;
+  border-radius: 50%;
+  right: -15px;
+}
+.option:nth-child(5)::after {
+  content: "5";
+  font-size: 2rem;
+  position: absolute;
+  border: 1.5rem solid var(--color-primary);
+  width: 80px;
+  height: 80px;
+  padding-top: 1rem;
+  border-radius: 50%;
+  left: -15px;
+}
 
-.option-text.correct {
+.option.correct {
   background-color: var(--color-correct);
 }
 
-.option-text.incorrect {
+.option.incorrect {
   background-color: var(--color-incorrect);
 }
 
-.progress-container {
+.page-counter-container {
   color: var(--color-secondary);
   display: flex;
   justify-content: center;
   font-size: 5rem;
-  padding-bottom: 2rem;
+  padding: 1rem 0;
 }
 
-.total-score {
+.results {
   font-size: 5rem;
 }
 
@@ -141,12 +166,12 @@ body {
   background: var(--color-white);
   border-radius: 10px;
   padding: 2rem 0;
-  margin: 0 auto;
+  margin: 2rem auto;
   width: 80%;
   text-align: center;
 }
 
-.question-text {
+.quiz-question {
   color: var(--color-secondary);
   font-size: 2.5rem;
 }
@@ -162,10 +187,9 @@ body {
   font-size: 4rem;
   color: var(--color-secondary);
   text-align: center;
-  padding-top: 1.5rem;
+  padding-top: 3rem;
 }
 
 .quiz-counter {
   font-size: 2rem;
-  padding-bottom: 1rem;
 }/*# sourceMappingURL=main.css.map */
