--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
+@import "abstracts/mixins";
 @import "abstracts/reset";
 @import "abstracts/variables";
 
