--- a/sass/components/_quiz.scss
+++ b/sass/components/_quiz.scss
@@ -12,6 +12,14 @@
   padding-top: 3rem;
 }
 
-.quiz-counter {
-  font-size: 2rem;
+.page-counter-container {
+  color: var(--color-secondary);
+  display: flex;
+  justify-content: center;
+  font-size: 5rem;
+  padding: 1rem 0;
+}
+
+.results {
+  font-size: 5rem;
 }
