--- a/sass/components/_options.scss
+++ b/sass/components/_options.scss
@@ -52,10 +52,10 @@
   }
 }
 
-.option.correct {
+.correct {
   background-color: var(--color-correct);
 }
 
-.option.incorrect {
+.incorrect {
   background-color: var(--color-incorrect);
 }
