--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,6 +9,7 @@
 .start-button,
 .restart-button {
   background-color: var(--color-primary);
+  color: var(--color-secondary);
   width: 12rem;
   height: 6rem;
   border: none;
