--- a/sass/components/_options.scss
+++ b/sass/components/_options.scss
@@ -28,28 +28,53 @@
 
   &:nth-child(1)::after {
     content: "1";
-    @include option-left;
+    @include option-position("start");
   }
 
   &:nth-child(2)::after {
     content: "2";
-    @include option-right;
+    @include option-position("end");
   }
 
   &:nth-child(3)::after {
     content: "3";
-    @include option-left;
+    @include option-position("start");
   }
 
   &:nth-child(4)::after {
     content: "4";
-    @include option-right;
+    @include option-position("end");
   }
 
   &:nth-child(5)::after {
     content: "5";
-    @include option-left;
+    @include option-position("start");
   }
+
+  // &:nth-child(1)::after {
+  //   content: "1";
+  //   @include option-left;
+  // }
+
+  // &:nth-child(2)::after {
+  //   content: "2";
+  //   @include option-right;
+  // }
+
+  // &:nth-child(3)::after {
+  //   content: "3";
+  //   @include option-left;
+  // }
+
+  // &:nth-child(4)::after {
+  //   content: "4";
+  //   @include option-right;
+  // }
+
+  // &:nth-child(5)::after {
+  //   content: "5";
+  //   @include option-left;
+  // }
 }
 
 .correct {
